--- a/packages/web/src/pages/profile-page/components/mobile/ProfileHeader.module.css
+++ b/packages/web/src/pages/profile-page/components/mobile/ProfileHeader.module.css
@@ -126,7 +126,7 @@
   font-weight: var(--font-medium);
   line-height: normal;
   display: inline-block;
-  margin-right: 10px;
+  margin-right: 8px;
 }
 
 .artistMetrics {
